# smart-image-renamer

./: .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  README.rst  pyproject.toml  requirements.txt  requirements_known_good.txt  smart-image-renamer.py
smart-image-renamer/: cli.py
smart_image_renamer/: cli.py
testdata/: something.jpg.sha256
