[tool.poetry]
name = "smart-image-renamer"
version = "0.1.0"
description = ""
authors = ["clemens-k <clemens-k@users.noreply.github.com>"]
license = "GPL2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymediainfo = "^6.1.0"
pillow = "^10.3.0"
pillow-heif = "^0.16.0"
inquirer = "^3.2.4"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pytest = "^8.2.0"

[tool.poetry.scripts]
smart-image-renamer = "smart-image-renamer.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
