[tool.poetry]
name = "smart-image-renamer"
version = "0.6.0"
description = "A script to intelligently bulk rename images using EXIF data contained within."
authors = ["Ronak Gandhi <ronak.gandhi@ronakg.com>", "clemens-k <clemens-k@users.noreply.github.com>"]
license = "GPL2"
readme = "README.md"
repository = "https://github.com/clemens-k/smart-image-renamer"
packages =[{include = "smart_image_renamer"}]
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Environment :: Console",
        "Intended Audience :: End Users/Desktop",
        "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
        "Operating System :: OS Independent",
        "Programming Language :: Python",
        "Topic :: Multimedia :: Graphics",
        "Topic :: System :: Filesystems",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Topic :: Utilities",
    ]
[tool.poetry.dependencies]
python = "^3.11"
pymediainfo = "^6.1.0"
pillow = "^10.3.0"
pillow-heif = "^0.16.0"
inquirer = "^3.2.4"
python-magic = "^0.4.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pytest = "^8.2.0"
pre-commit = "^3.0.0"

[tool.poetry.scripts]
smart-image-renamer = "smart_image_renamer.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
